--- a/src/components/pages/Styles/Home.css
+++ b/src/components/pages/Styles/Home.css
@@ -1,10 +1,14 @@
+@font-face {
+  font-family: 'MonteCarloRegular';
+  src: url('../../Sources/MonteCarlo-Regular.ttf') format('truetype');
+}
 
 .home-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-image: url('../../imgs/piscina.jpg');
+    background-image: url('../../imgs/HMn.jpeg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -16,19 +20,24 @@
   }
   
   .home-container p {
-    font-size: 15px;
-    margin: 10px;
+    font-size: 30px;
+    margin: 3px;
+    color: black;
   }
   
   .home-container h1 {
-    font-size: 2em;
-    margin: 10px;
+    font-size: 100px;
+    margin: 3px;
+    font-weight: 600;
+    font-family: 'MonteCarloRegular', sans-serif;
+    color: black;
   }
   
   .home-container h5 {
-    font-size: 1.2em;
+    font-size: 15px;
     font-weight: normal;
-    margin: 10px;
+    margin: 3px;
+    color: black;
   }
   
   .home-container a {
