--- a/src/components/pages/Styles/Home.css
+++ b/src/components/pages/Styles/Home.css
@@ -22,7 +22,7 @@
   .home-container p {
     font-size: 30px;
     margin: 3px;
-    color: black;
+    color: aliceblue;
   }
   
   .home-container h1 {
@@ -30,14 +30,14 @@
     margin: 3px;
     font-weight: 600;
     font-family: 'MonteCarloRegular', sans-serif;
-    color: black;
+    color: aliceblue;
   }
   
   .home-container h5 {
     font-size: 15px;
     font-weight: normal;
     margin: 3px;
-    color: black;
+    color: aliceblue;
   }
   
   .home-container a {
