--- a/src/components/pages/Styles/Home.css
+++ b/src/components/pages/Styles/Home.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-image: url('../../imgs/HMn.jpeg');
+    background-image: url('../../imgs/AI.jpeg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
